--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>test of web in github</title>
+  
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+ 
+</head>
+
+<body>
+
+  <div class="page-header">
+       <h3>a1-cars, a1-film, and a1-mutualfunds .csv Created by Xinyi</h3>
+     </div>
+       <p>Full-Screen view (Cars data): <a href="/infovis13/hw3/Line-Cars.html">Line Chart</a></p>
+       <p>Full-Screen view (Films data): <a href="/infovis13/hw3/Pie-Film.html">Pie Chart</a></p>
+       <p>Full-Screen view (Mutualfunds data): <a href="/infovis13/hw3/Bar-MutualFunds.html">Bar Chart</a> </p>
+  <!--script  src="js/scripts.js"></script-->
+</body>
+</html>
 
